UI: Fix z-index issues for sidemenu
Side menu now has a higher z-index than the event cards, and a lower
z-index than the footer (as opposed to just stopping before the footer
it now hides behind it).

Fixes #301

--- a/frontend/public/module/ui/resources/_namespace-list.scss
+++ b/frontend/public/module/ui/resources/_namespace-list.scss
@@ -19,10 +19,10 @@
 
 #co-side-menu {
   background: $color-grey-dark;
-  z-index: 99;
+  z-index: $z-plane-4;
   position: absolute;
   top: 46px;
-  bottom: 40px;
+  bottom: 0;
   right: 0px;
   width: 20%;
   padding-top: 10px;
